--- a/html/home.html
+++ b/html/home.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Adulting Calculators </title>
 </head>
 <body>
+    <p>Are you confused? Are you screaming into the void? </p>
     
 </body>
 </html>
