--- a/html/home.html
+++ b/html/home.html
@@ -6,7 +6,10 @@
     <title> Adulting Calculators </title>
 </head>
 <body>
-    <p>Are you confused? Are you screaming into the void? </p>
+    <p>Are you confused? Are you screaming into the void? We are too! We are so, so, so, confused and we're adults. (Scary!) 
+    So,we created these super spicy adulting calculators just for you! The horrors of capitalism will not frighten us any longer! We are seizing the day!
+    Adulting! Yay! 
+    </p>
     
 </body>
 </html>
