readme and anchors in home

--- a/html/home.html
+++ b/html/home.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Adulting Calculators </title>
-</head>
-<body>
-    <p>Are you confused? Are you screaming into the void? We are too! We are so, so, so, confused and we're adults. (Scary!) 
-    So,we created these super spicy adulting calculators just for you! The horrors of capitalism will not frighten us any longer! We are seizing the day!
-    Adulting! Yay! 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Adulting Calculators</title>
+  </head>
+  <body>
+    <p>
+      Are you confused? Are you screaming into the void? We are too! We are so,
+      so, so, confused and we're adults. (Scary!) So,we created these super
+      spicy adulting calculators just for you! The horrors of capitalism will
+      not frighten us any longer! We are seizing the day! Adulting! Yay!
     </p>
-    
-</body>
+    <div>
+        <a href="mortgage.html">Mortgage Calculator</a>
+        <a href="interest.html">Interest Calculator</a>
+        <a href="annuity.html">Annuity Calculator</a>
+    </div>
+  </body>
 </html>
