finished mortgage.js

--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adulting Calculators</title>
+    <a rel="stylesheet" src="../css/home.css" ></a>
   </head>
   <body>
     <p>
@@ -12,10 +13,12 @@
       spicy adulting calculators just for you! The horrors of capitalism will
       not frighten us any longer! We are seizing the day! Adulting! Yay!
     </p>
-    <div>
-        <a href="mortgage.html">Mortgage Calculator</a>
-        <a href="interest.html">Interest Calculator</a>
-        <a href="annuity.html">Annuity Calculator</a>
+    <div id="navigation">
+    <ul>
+        <li><a href="mortgage.html">Mortgage Calculator</a></li>
+        <li><a href="interest.html">Interest Calculator</a></li>
+        <li><a href="annuity.html">Annuity Calculator</a></li>
+    </ul>
     </div>
   </body>
 </html>
