--- a/html/home.html
+++ b/html/home.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adulting Calculators</title>
-    <a rel="stylesheet" src="../css/home.css" ></a>
+    <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
+    <header>
     <p>
       Are you confused? Are you screaming into the void? We are too! We are so,
       so, so, confused and we're adults. (Scary!) So,we created these super
       spicy adulting calculators just for you! The horrors of capitalism will
       not frighten us any longer! We are seizing the day! Adulting! Yay!
     </p>
+
+    </header>
+
     <div id="navigation">
     <ul>
         <li><a href="mortgage.html">Mortgage Calculator</a></li>
