--- a/html/mortgage.html
+++ b/html/mortgage.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1> Mortgage Calculator </h1>
-    <p>Principal: <input type="number" id="principalField"/></p>
-    <p>Interest: <input type="number" id="interestField"/></p>
-    <p>Duration: <input type="number" id="durationField"/></p>
+    <link rel="stylesheet" href="../css/pages.css" />
+  </head>
+  <body>
+    <h1>Mortgage Calculator</h1>
+    <div id="fields">
+      <p>Principal: <input type="number" id="principalField" /></p>
+      <p>Interest: <input type="number" id="interestField" /></p>
+      <p>Duration: <input type="number" id="durationField" /></p>
 
-    <p>Expected Monthly Payments: <input type="number" id="paymentField" readonly/></p>
-    <p>Total Interest: <input type="number" id="totalField" readonly/></p>
+      <p>
+        Expected Monthly Payments:
+        <input type="number" id="paymentField" readonly />
+      </p>
+      <p>Total Interest: <input type="number" id="totalField" readonly /></p>
 
-    <input type="button" value="Calculate" id="calculateButton" />
-
-<script src="../scripts/mortgage.js"></script>
-</body>
+      <input type="button" value="Calculate" id="calculateButton" />
+      <br>
+    </div>
+    <script src="../scripts/mortgage.js"></script>
+  </body>
 </html>
